# babbelbook

./: CLAUDE.md  README.md  babbelbook_flet.py  book_browser.py  config.py  deduplicate_books.py  flet_dropdown_test.py  organize_books.py  pyproject.toml  repair_db.py  requirements.txt  run_tests.py
browser/: db.py  query_cache.py  routes_read.py  routes_write.py
browser/ui/: layout.py  script.py  style.py
organizer/: __init__.py  cache.py  classifier.py  enrichment.py  extractors.py  organizer.py
tests/: conftest.py
tests/integration/: test_api_read.py  test_api_write.py  test_organizer.py
tests/unit/: test_browser_helpers.py  test_cache.py  test_classifier.py  test_deduplicator.py  test_language_map.py  test_merge_authors.py
