[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "babbelbook"
version = "0.1.0"
description = "Personal e-book library manager with Flet desktop UI and Flask web UI"
requires-python = ">=3.11"
readme = "README.md"

# Only the two UI runtimes are required to run either front-end.
# Only the two UI runtimes are required to run either front-end.
# Format-support and LLM packages are optional — see [project.optional-dependencies].
dependencies = [
    "flet>=0.82.0",
    "flask>=3.0",
]

[project.optional-dependencies]

# Format support — add coverage for specific e-book formats
formats = [
    "ebooklib>=0.18",       # .epub metadata and text extraction
    "pymupdf>=1.24",        # .pdf metadata and text extraction
    "mobi>=0.3.3",          # .mobi / .azw / .azw3 extraction
    "isbnlib>=3.10",        # ISBN → rich metadata via online APIs
    "langdetect>=1.0.9",    # Language detection from extracted text
]

# Local LLM support via Ollama (HTTP only — no extra Python package needed)
# Run:  ollama pull gpt-oss:20b && ollama serve
llm = []

# Development and testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# Full install (all optional groups except dev)
all = [
    "ebooklib>=0.18",
    "pymupdf>=1.24",
    "mobi>=0.3.3",
    "isbnlib>=3.10",
    "langdetect>=1.0.9",
]

[project.scripts]
babbelbook      = "babbelbook_flet:main"
book-browser    = "book_browser:main"
organize-books  = "organize_books:main"
dedup-books     = "deduplicate_books:main"

[tool.setuptools.packages.find]
include = ["organizer*", "browser*", "tests*"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line length handled by formatter
